# 3DEng

./: .gitmodules  CMakeLists.txt  imgui.ini
include/: camera.h
include/Render/: mesh.h  model.h  render.h  scene.h  shader.h  texture.h
libs/glad/: glad.h
shaders/: defaultFrag.glsl  defaultVert.glsl
src/: camera.cpp
src/Render/: mesh.cpp  model.cpp  render.cpp  shader.cpp  texture.cpp
